<resources>
    <string name="app_name">We help you learn :)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="calculator">Financial Calculator</string>
    <string name="Stocks_line">Stocks</string>
    <string name="Fin_book">Financial book</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_wiki_page">WikiPage</string>
    <string name="tab_news">News</string>
    <string name="tab_forum">Forum</string>
    <string name="news_source">Source:</string>

    <string name="refresh">Refresh</string>
    <string name="change_account">Change Account</string>
    <string name="log_out">Log Out</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="avatar">Avatar</string>
    <string name="network_error">Network Error</string>

    <string name="news">News</string>
    <string name="forum">Forum</string>

    <!--TimeUtil Start-->
    <string name="just_now">top</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <!--TimeUtil End-->

    <string name="title_activity_topic">Topic</string>
    <string name="top_news">Top News</string>
    <string name="recent_stories">Recent Stories</string>
    <string name="compute">Compute:</string>
    <string name="present_value">Present Value, $ (?)</string>
    <string name="future_value">Future Value, $ (?)</string>
    <string name="number_of_periods">Number of Periods</string>
    <string name="payment">Payment</string>
    <string name="interest_rate">Interest Rate, % (?)</string>
    <string name="calculate">Calculate</string>
    <string name="total_interest">Total Interest</string>
    <string name="period">Number of Periods</string>
    <string name="clear">Clear</string>

    <!--Calculator spinner-->
    <string-array name="calc_spinner">
        <item>Future Value</item>
        <item>Present Value</item>
        <item>Interest Rate</item>
    </string-array>
    <string-array name="payment_spinner">
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Yearly</item>
    </string-array>

</resources>
